--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mais40",
+  "name": "pokemon",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hexagon": "^1.1.3",
+    "react-icons": "^4.4.0",
+    "sass": "^1.55.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "@types/node": "^18.7.23",
+    "@types/react": "^18.0.21",
+    "@types/styled-components": "^5.1.26",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "12.3.1",
+    "typescript": "^4.8.4"
   }
 }
