--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon",
+  "name": "mais40",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,7 @@
     "@types/react": "^18.0.21",
     "@types/styled-components": "^5.1.26",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.25.0",
     "eslint-config-next": "12.3.1",
     "typescript": "^4.8.4"
   }
